# add_container

./: .gitignore  CMakeLists.txt  DataRow.h  DatabaseManager.cpp  DatabaseManager.h  GeminiClient.cpp  GeminiClient.h  GoogleSheetsClient.cpp  MainWindow.h  app.js  build.js  capacitor.config.json  index.html  package-lock.json  package.json  run_app.ps1  test_gemini_upload.py  ui.spec
.github/workflows/: build-apk.yml
android/app/: build.gradle
android/app/src/main/java/com/visionlogistics/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
asycuda_unrelate to project/: asycuda_output.json  main.py  template.xml
backend/: ai.py  sync_data.py  ui.py
cpp_backend/: CMakeCache.txt  DataRow.h  DatabaseManager.cpp  DatabaseManager.h  GeminiClient.cpp  GeminiClient.h  GoogleSheetsClient.cpp  GoogleSheetsClient.h  MainWindow.cpp  MainWindow.h  README.md  build_and_run.bat  main.cpp
static_web/: app.js  index.html
